First final version

--- a/src/main/resources/static/apteka_admin.html
+++ b/src/main/resources/static/apteka_admin.html
@@ -22,10 +22,10 @@
                     <img src="img/ZOOVET_KONSALTING2.png" class="logo_img" alt="">
                 </a>
                 <div class="menu_button_container">
-                    <a href="" class="menu_button">УСЛУГИ</a>
-                    <a href="article.html" class="menu_button">СТАТЬИ</a>
-                    <a href="" class="menu_button">АПТЕКА</a>
-                    <a href="" class="menu_button">КОНТАКТЫ</a>
+                    <a href="procedure.html" class="menu_button">УСЛУГИ</a>
+                            <a href="article.html" class="menu_button">СТАТЬИ</a>
+                            <a href="apteka.html" class="menu_button">АПТЕКА</a>
+                            <a href="" class="menu_button">КОНТАКТЫ</a>
                 </div>
             </div>
         </div>
