--- a/src/main/resources/static/article.html
+++ b/src/main/resources/static/article.html
@@ -16,11 +16,11 @@
                 <a href="index.html" class="logo_container">
                     <img src="img/ZOOVET_KONSALTING2.png" class="logo_img" alt="">
                     <!-- <img src="img/GPS.png" class="gps_img" alt=""> -->
-                <a>
+                </a>
                 <div class="menu_button_container">
-                    <a href="" class="menu_button">УСЛУГИ</a>
+                    <a href="procedure.html" class="menu_button">УСЛУГИ</a>
                     <a href="article.html" class="menu_button">СТАТЬИ</a>
-                    <a href="" class="menu_button">АПТЕКА</a>
+                    <a href="apteka.html" class="menu_button">АПТЕКА</a>
                     <a href="" class="menu_button">КОНТАКТЫ</a>
                 </div>
             </div>
@@ -32,8 +32,8 @@
                 Статьи
             </div>
 
-            <div class="article_grid" id="article-grid" >
-                
+            <div class="article_grid" id="article-grid">
+
 
             </div>
         </div>
