--- a/src/main/resources/static/article_admin.html
+++ b/src/main/resources/static/article_admin.html
@@ -17,9 +17,9 @@
                     <!-- <img src="img/GPS.png" class="gps_img" alt=""> -->
                     <a>
                         <div class="menu_button_container">
-                            <a href="" class="menu_button">УСЛУГИ</a>
+                            <a href="procedure.html" class="menu_button">УСЛУГИ</a>
                             <a href="article.html" class="menu_button">СТАТЬИ</a>
-                            <a href="" class="menu_button">АПТЕКА</a>
+                            <a href="apteka.html" class="menu_button">АПТЕКА</a>
                             <a href="" class="menu_button">КОНТАКТЫ</a>
                         </div>
             </div>
@@ -86,6 +86,7 @@
                                     <h1 class="articl_slide_text_h1">
                                         <a class="articl_slide_text_a" href="read_article.html/?id=${article.id}">Читать дальше</a>
                                         <a class="articl_slide_text_a" href="article_edit.html/?id=${article.id}">Ред.</a>
+                                        <div class="articl_slide_text_a"  style="color: red;">${article.on_main}</div>
                                     </h1>
                                     
                                 </div>
