--- a/src/main/resources/static/read_article.html
+++ b/src/main/resources/static/read_article.html
@@ -23,10 +23,10 @@
                     <!-- <img src="img/GPS.png" class="gps_img" alt=""> -->
                 <a>
                 <div class="menu_button_container">
-                    <a href="" class="menu_button">УСЛУГИ</a>
-                    <a href="article.html" class="menu_button">СТАТЬИ</a>
-                    <a href="" class="menu_button">АПТЕКА</a>
-                    <a href="" class="menu_button">КОНТАКТЫ</a>
+                    <a href="procedure.html" class="menu_button">УСЛУГИ</a>
+                            <a href="article.html" class="menu_button">СТАТЬИ</a>
+                            <a href="apteka.html" class="menu_button">АПТЕКА</a>
+                            <a href="" class="menu_button">КОНТАКТЫ</a>
                 </div>
             </div>
         </div>
