--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,238 +1,215 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
-    <script>
-        const link = document.createElement("link");
-        link.rel = "stylesheet";
-        link.href = "/css/style.css?ts=" + new Date().getTime();
-        document.head.appendChild(link);
-    </script>
-    <link rel="icon" href="img/zoovet3.png">
-    <meta charset="UTF-8">
-    <title>Зоовет консалтинг</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <meta charset="UTF-8">
+  <title>Зоовет консалтинг</title>
+  <link rel="icon" href="img/zoovet3.png">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+  <script>
+    const link = document.createElement("link");
+    link.rel = "stylesheet";
+    link.href = "/css/style.css?ts=" + new Date().getTime();
+    document.head.appendChild(link);
+  </script>
 </head>
 
 <body>
-    <div class="top">
-        <div class="top_context">
-            <div class="top_menu">
-                <a href="index.html" class="logo_container">
-                    <img src="img/ZOOVET_KONSALTING2.png" class="logo_img" alt="">
-                    <!-- <img src="img/GPS.png" class="gps_img" alt=""> -->
-                    <a>
-                        <div class="menu_button_container">
-                            <a href="procedure.html" class="menu_button">УСЛУГИ</a>
-                            <a href="article.html" class="menu_button">СТАТЬИ</a>
-                            <a href="apteka.html" class="menu_button">АПТЕКА</a>
-                            <a href="" class="menu_button">КОНТАКТЫ</a>
-                        </div>
-            </div>
-            <img src="img/dog6.png" class="dog_img" alt="">
-            <div class="main_description">
-                <div class="main_description_head">Мы заботимся о ваших питомцах</div>
-                <div class="main_description_body">Ваш питомец — часть семьи, и именно так мы к нему относимся.
-                    Мы поможем сохранить здоровье и подарить долгие счастливые годы рядом с вами.
-                    Каждый ваш друг бесценен!</div>
-            </div>
+  <!-- Шапка сайта -->
+  <header class="top">
+    <div class="top_context">
+      <nav class="top_menu">
+        <a href="index.html" class="logo_container">
+          <img src="img/ZOOVET_KONSALTING2.png" class="logo_img" alt="Zoovet консалтинг">
+        </a>
+        <div class="menu_button_container">
+          <a href="procedure.html" class="menu_button">УСЛУГИ</a>
+          <a href="article.html" class="menu_button">СТАТЬИ</a>
+          <a href="apteka.html" class="menu_button">АПТЕКА</a>
+          <a href="#contacts" class="menu_button">КОНТАКТЫ</a>
         </div>
-    </div>
-    <div class="middle">
-        <div class="middle_context">
-            <div class="cards_container_positional">
-                <div class="cards_container">
-                    <div class="card">
-                        <img src="img/pet_icon.png" alt="Cat">
-                        <h3>Обследование</h3>
-                        <p>Регулярные осмотры и вакцинация помогут сохранить здоровье вашего питомца.</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/health_icon.png" alt="Dog">
-                        <h3>Хирургия</h3>
-                        <p>Наши врачи проводят операции любой сложности с заботой о безопасности.</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/dog_icon.png" alt="Pet Care">
-                        <h3>Срочная помощь</h3>
-                        <p>Мы всегда готовы оказать помощь в экстренной ситуации, 24/7.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="top" style="height: 580px;">
-        <div class="procedures_context">
-            <div class="procedures_description">
-                <div class="procedures_description_head">Наши услуги</div>
-                <div class="procedures_cards" id="proceduresContainer">
-                    <!-- <div class="procedure_card">
-                        <img src="img/cat_icon.png" class="procedures_card_img" alt="Cat">
-                        <div class="line"></div>
-                        <div class="procedure_card_text">
-                            <h3>Кастрация кота</h3>
-                            <p>10000тг</p>
-                        </div>
-                    </div>
-                    <div class="procedure_card">
-                        <img src="img/cat_icon2.png" class="procedures_card_img" alt="Cat">
-                        <div class="line"></div>
-                        <div class="procedure_card_text">
-                            <h3>Стирилизация кошки</h3>
-                            <p>12000тг</p>
-                        </div>
-                    </div>
-                    <div class="procedure_card">
-                        <img src="img/doctor_icon.png" class="procedures_card_img" alt="Cat">
-                        <div class="line"></div>
-                        <div class="procedure_card_text">
-                            <h3>Приём врача-терапевта</h3>
-                            <p>6000тг</p>
-                        </div>
-                    </div>
-                    <div class="procedure_card">
-                        <img src="img/dog_icon.png" class="procedures_card_img" alt="Cat">
-                        <div class="line"></div>
-                        <div class="procedure_card_text">
-                            <h3>Стирилизация собаки</h3>
-                            <p>15000тг</p>
-                        </div>
-                    </div> -->
-                </div>
-            </div>
-            <img src="img/cat2.png" class="procedures_context_img" alt="">
-            <a href="procedure.html" class="procedures_a">Посмотреть все услуги</a>
-        </div>
-    </div>
-    <div class="opteka">
-        <div class="opteka_context">
-            <div class="apteka_top">
-                <div class="apteka_description_head">Вет аптека</div>
-                <a href="article.html" class="apteka_a">Посмотреть все товары</a>
-            </div>
-            <div class="apteka_line"></div>
-            <div class="carousel" id="product">
-                <!-- ПРОДУКТЫ -->
-            </div>
-            <div class="apteka_line"></div>
-        </div>
-    </div>
-    <div class="review">
-        <div class="review_context">
-            <div class="review_context_head">Отзывы наших клиентов</div>
-            <div class="swiper swiper_review">
-                <!-- Контейнер для слайдов -->
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <img src="img/review1.png" alt="">
-                        <img src="img/review2.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/review3.png" alt="">
-                        <img src="img/review4.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/review5.png" alt="">
-                        <img src="img/review6.png" alt="">
-                    </div>
-                    <div class="swiper-slide">
-                        <img src="img/review7.png" alt="">
-                        <img src="img/review8.png" alt="">
-                    </div>
-                    <div class="swiper-slide">Больше отзывов у нас в 2gis</div>
-                </div>
-                <!-- Кнопки навигации -->
-                <div class="swiper-button-next swiper-button-next_review"></div>
-                <div class="swiper-button-prev swiper-button-prev_review"></div>
-                <!-- Пагинация (точки снизу) -->
-                <div class="swiper-pagination swiper-pagination_review"></div>
-            </div>
-        </div>
-    </div>
-    <div class="articles_and_map">
-        <div class="articles_map_context">
-            <div class="map">
-                <a class="map_a" target="_blank" href="https://go.2gis.com/vevnQ">
-                    <img src="img/2gis.png" alt="">
-                </a>
-                <a class="map_a" target="_blank"
-                    href="https://www.instagram.com/vetklinikakost?utm_source=ig_web_button_share_sheet&igsh=MjQ1ZnhqOWxsMDFh">
-                    <img src="img/instagram.png" alt="">
-                </a>
-            </div>
-            <div class="articles">
-                <div class="articles_top_container">
-                    <div class="articles_head">Статьи</div>
-                </div>
-                <div class="swiper swiper_articles">
-                    <div class="swiper-wrapper" id="swiper_articles">
-                        <!-- СТАТЬИ -->
-                    </div>
-                    <div class="swiper-button-prev swiper-button-prev_articles"></div>
-                    <div class="swiper-button-next swiper-button-next_articles"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="bottom">
-        <div class="bottom_context">
-            <div class="bottom_block">
-                <img src="img/ZOOVET_KONSALTING2.png" class="logo_bottom_img" alt="">
-            </div>
-            <div class="bottom_block">
-                <h3>Адрес</h3>
-                <p>
-                    Улица Тауелсыздык, 76
-                    Тобыл, Костанайская область
-                </p>
-            </div>
-            <div class="bottom_block">
-                <h3>График работы</h3>
-                <h1>Ежедневно с 09:00 до 22:00</h1>
-                <h1>Обед c 13:00 до 14:00</h1>
-            </div>
-            <div class="bottom_block">
-                <h3>Контакты</h3>
-                <h1>Whatsapp</h1>
-                <p>+77052125345</p>
-                <p>+77052125345</p>
-                <h1>Telegram</h1>
-                <p>@zoovet</p>
-                <h1>Instagram</h1>
-                <p>@vetklinikakost</p>
-            </div>
-        </div>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="js/articles.js"></script>
-    <script src="js/procedure.js"></script>
-    <script src="js/product.js"></script>
-    <script>
-        const swiper = new Swiper('.swiper_review', {
+      </nav>
 
-            navigation: {
-                nextEl: '.swiper-button-next_review',
-                prevEl: '.swiper-button-prev_review',
-            },
-            pagination: {
-                el: '.swiper-pagination_review',
-                clickable: true,
-            },
-        });
-    </script>
-    <script>
-        window.swiperArticles = new Swiper('.swiper_articles', {
+      <section class="main_description">
+        <h1 class="main_description_head">Мы заботимся о ваших питомцах</h1>
+        <p class="main_description_body">
+          Ваш питомец — часть семьи, и именно так мы к нему относимся.
+          Мы поможем сохранить здоровье и подарить долгие счастливые годы рядом с вами.
+          Каждый ваш друг бесценен!
+        </p>
+      </section>
 
-            navigation: {
-                nextEl: '.swiper-button-next_articles',
-                prevEl: '.swiper-button-prev_articles',
-            },
-            pagination: {
-                el: '.swiper-pagination_articles',
-                clickable: true,
-            },
-        });
-    </script>
+      <img src="img/dog6.png" class="dog_img" alt="Собака">
+    </div>
+  </header>
+
+  <!-- Блок карточек -->
+  <section class="middle">
+    <div class="middle_context">
+        <div class="cards_container">
+          <article class="card">
+            <img src="img/pet_icon.png" alt="Обследование">
+            <h3>Обследование</h3>
+            <p>Регулярные осмотры и вакцинация помогут сохранить здоровье вашего питомца.</p>
+          </article>
+          <article class="card">
+            <img src="img/health_icon.png" alt="Хирургия">
+            <h3>Хирургия</h3>
+            <p>Наши врачи проводят операции любой сложности с заботой о безопасности.</p>
+          </article>
+          <article class="card">
+            <img src="img/dog_icon.png" alt="Срочная помощь">
+            <h3>Срочная помощь</h3>
+            <p>Мы всегда готовы оказать помощь в экстренной ситуации, 24/7.</p>
+          </article>
+        </div>
+    </div>
+  </section>
+
+  <!-- Услуги -->
+  <section class="procedures" >
+    <div class="procedures_context">
+      <div class="procedures_description">
+        <h2 class="procedures_description_head">Наши услуги</h2>
+        <div class="procedures_cards" id="proceduresContainer">
+          <!-- Сюда динамически подгружаются карточки услуг -->
+        </div>
+      </div>
+      <img src="img/cat2.png" class="procedures_context_img" alt="Кот">
+      <a href="procedure.html" class="procedures_a">Посмотреть все услуги</a>
+    </div>
+  </section>
+
+  <!-- Аптека -->
+  <section class="opteka">
+    <div class="opteka_context">
+      <div class="apteka_top">
+        <h2 class="apteka_description_head">Вет аптека</h2>
+        <a href="article.html" class="apteka_a">Посмотреть все товары</a>
+      </div>
+      <div class="apteka_line"></div>
+      <div class="carousel" id="product">
+        <!-- Динамическая подгрузка товаров -->
+      </div>
+      <div class="apteka_line"></div>
+    </div>
+  </section>
+
+  <!-- Отзывы -->
+  <section class="review">
+    <div class="review_context">
+      <h2 class="review_context_head">Отзывы наших клиентов</h2>
+      <div class="swiper swiper_review">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="img/review1.png" alt="Отзыв 1">
+            <img src="img/review2.png" alt="Отзыв 2">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/review3.png" alt="Отзыв 3">
+            <img src="img/review4.png" alt="Отзыв 4">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/review5.png" alt="Отзыв 5">
+            <img src="img/review6.png" alt="Отзыв 6">
+          </div>
+          <div class="swiper-slide">
+            <img src="img/review7.png" alt="Отзыв 7">
+            <img src="img/review8.png" alt="Отзыв 8">
+          </div>
+          <div class="swiper-slide">
+            Больше отзывов у нас в 2gis
+          </div>
+        </div>
+        <div class="swiper-button-next swiper-button-next_review"></div>
+        <div class="swiper-button-prev swiper-button-prev_review"></div>
+        <div class="swiper-pagination swiper-pagination_review"></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Статьи и карта -->
+  <section class="articles_and_map">
+    <div class="articles_map_context">
+      <aside class="map">
+        <a class="map_a" target="_blank" href="https://go.2gis.com/vevnQ">
+          <img src="img/2gis.png" alt="2GIS">
+        </a>
+        <a class="map_a" target="_blank"
+          href="https://www.instagram.com/vetklinikakost?utm_source=ig_web_button_share_sheet&igsh=MjQ1ZnhqOWxsMDFh">
+          <img src="img/instagram.png" alt="Instagram">
+        </a>
+      </aside>
+
+      <section class="articles">
+        <div class="articles_top_container">
+          <h2 class="articles_head">Статьи</h2>
+        </div>
+        <div class="swiper swiper_articles">
+          <div class="swiper-wrapper" id="swiper_articles">
+            <!-- Статьи подгружаются динамически -->
+          </div>
+          <div class="swiper-button-prev swiper-button-prev_articles"></div>
+          <div class="swiper-button-next swiper-button-next_articles"></div>
+        </div>
+      </section>
+    </div>
+  </section>
+
+  <!-- Подвал -->
+  <footer class="bottom" id="contacts">
+    <div class="bottom_context">
+      <div class="bottom_block">
+        <img src="img/ZOOVET_KONSALTING2.png" class="logo_bottom_img" alt="Zoovet консалтинг">
+      </div>
+      <div class="bottom_block">
+        <h3>Адрес</h3>
+        <address>
+          Улица Тауелсыздык, 76<br>
+          Тобыл, Костанайская область
+        </address>
+      </div>
+      <div class="bottom_block">
+        <h3>График работы</h3>
+        <p>Ежедневно с 09:00 до 22:00</p>
+        <p>Обед c 13:00 до 14:00</p>
+      </div>
+      <div class="bottom_block">
+        <h3>Контакты</h3>
+        <p><strong>Whatsapp:</strong> +77052125345, +77052125345</p>
+        <p><strong>Telegram:</strong> @zoovet</p>
+        <p><strong>Instagram:</strong> @vetklinikakost</p>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Скрипты -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script src="js/articles.js"></script>
+  <script src="js/procedure.js"></script>
+  <script src="js/product.js"></script>
+  <script>
+    const swiper = new Swiper('.swiper_review', {
+      navigation: {
+        nextEl: '.swiper-button-next_review',
+        prevEl: '.swiper-button-prev_review',
+      },
+      pagination: {
+        el: '.swiper-pagination_review',
+        clickable: true,
+      },
+    });
+
+    window.swiperArticles = new Swiper('.swiper_articles', {
+      navigation: {
+        nextEl: '.swiper-button-next_articles',
+        prevEl: '.swiper-button-prev_articles',
+      },
+      pagination: {
+        el: '.swiper-pagination_articles',
+        clickable: true,
+      },
+    });
+  </script>
 </body>
-
 </html>
